Closed
Bug 1727361
Opened 4 years ago
Closed 4 years ago
Firefox tries to decode an Objective-C file from Searchfox as if it were FLAC audio
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
RESOLVED
FIXED
93 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox91 | --- | unaffected |
| firefox92 | --- | unaffected |
| firefox93 | --- | fixed |
People
(Reporter: jryans, Assigned: padenot)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(1 file)
STR:
ER:
I should see a source code listing.
AR:
In Firefox 93, a media player appears instead. The DevTools network view thinks the document is a FLAC audio file. The console says:
Media resource https://searchfox.org/mozilla-central/source/gfx/layers/NativeLayerCA.mm could not be decoded, error: Error Code: NS_ERROR_DOM_MEDIA_DEMUXER_ERR (0x806e000c)
Response headers:
HTTP/2 200 OK
date: Tue, 24 Aug 2021 15:24:56 GMT
content-type: text/html
content-length: 68268
server: nginx/1.18.0 (Ubuntu)
last-modified: Tue, 24 Aug 2021 05:02:28 GMT
etag: "61247d64-10aac"
content-encoding: gzip
expires: Tue, 24 Aug 2021 15:26:56 GMT
cache-control: max-age=120
strict-transport-security: max-age=63072000; includeSubDomains; preload
cache-control: must-revalidate
X-Firefox-Spdy: h2
Request headers:
GET /mozilla-central/source/gfx/layers/NativeLayerCA.mm HTTP/2
Host: searchfox.org
User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:93.0) Gecko/20100101 Firefox/93.0
Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,*/*;q=0.8
Accept-Language: en-GB,en-US;q=0.7,en;q=0.3
Accept-Encoding: gzip, deflate, br
DNT: 1
Connection: keep-alive
Upgrade-Insecure-Requests: 1
Sec-Fetch-Dest: document
Sec-Fetch-Mode: navigate
Sec-Fetch-Site: cross-site
Pragma: no-cache
Cache-Control: no-cache
| Assignee | ||
Comment 1•4 years ago
|
||
Probably a regression from 1704115. Very unlucky byte pattern.
Assignee: nobody → padenot
| Reporter | ||
Updated•4 years ago
|
Keywords: regression
Regressed by: 1704115
Updated•4 years ago
|
Has Regression Range: --- → yes
| Reporter | ||
Updated•4 years ago
|
Component: Searchfox → Audio/Video: Playback
Product: Webtools → Core
Comment 2•4 years ago
|
||
Set release status flags based on info from the regressing bug 1704115
status-firefox91:
--- → unaffected
status-firefox92:
--- → unaffected
status-firefox93:
--- → affected
status-firefox-esr78:
--- → unaffected
status-firefox-esr91:
--- → unaffected
| Reporter | ||
Comment 3•4 years ago
|
||
To clarify, this no longer reproduces at the above URL, as the page was re-indexed, so the byte pattern has changed.
| Assignee | ||
Comment 4•4 years ago
|
||
Besides, live streaming in FLAC is (always?) done in OGG container.
Pushed by padenot@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/13b01785e531
Don't sniff for a FLAC stream, it's not deterministic enough and no spec exist. r=bryce
Comment 6•4 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•