Bug 1727361 - Don't sniff for a FLAC stream, it's not deterministic enough and no spec exist. r=bryce

Besides, live streaming in FLAC is (always?) done in OGG container.

Differential Revision: https://phabricator.services.mozilla.com/D123639